--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.0.2",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^5.1.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
