--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
