Ignore warnings in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Build project
           command: |
-            npm run build
+            CI=false npm run build
       - run:
           name: Deploy
           command: | 
