--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,11 @@ jobs:
       - run:
           name: Deploy
           command: | 
-            ssh-keyscan -H ines.cs.unibo.it >> ~/.ssh/known_hosts
-            scp -r build/index.html antonio.lopez2@ines.cs.unibo.it:/home/web/site202118/html/public/
-            scp -r build/css/shop antonio.lopez2@ines.cs.unibo.it:/home/web/site202118/html/public/css/
-            scp -r build/js/shop antonio.lopez2@ines.cs.unibo.it:/home/web/site202118/html/public/js/
-            scp -r build/img antonio.lopez2@ines.cs.unibo.it:/home/web/site202118/html/public/media/img
+            ssh-keyscan -H lucia.cs.unibo.it >> ~/.ssh/known_hosts
+            scp -r build/index.html antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/
+            scp -r build/css/shop antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/css/
+            scp -r build/js/shop antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/js/
+            scp -r build/img antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/media/img
 
 
 workflows:
