--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,10 @@ jobs:
             scp -r build/css/shop antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/css/
             scp -r build/js/shop antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/js/
             scp -r build/img antonio.lopez2@lucia.cs.unibo.it:/home/web/site202118/html/public/media/img
+      - run:
+          name: Update src
+          command: |
+            ssh antonio.lopez2@lucia.cs.unibo.it "bash --login -c 'cd /home/web/site202118/html/src/front-office && git pull' "
 
 
 workflows:
